--- a/Brandlogs/Admin/AdminOptions.html
+++ b/Brandlogs/Admin/AdminOptions.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="mb-5">
       <nav class="navbar navbar-expand-md navbar-light bg-success">
         <div class="container-fluid px-md-5">
           <a class="navbar-brand" href="../LandingPage/landingPage.html">
@@ -49,46 +49,15 @@
       </nav>
     </header>
     <div class="container-fluid p-3">
-      <h3 class="text-center my-4">Admin Login</h3>
-      <div class="d-flex justify-content-center align-items-center">
-        <div class="form p-5 rounded">
-          <form action="submit" class="">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label"
-                >Username</label
-              >
-              <input
-                type="tel"
-                id="exampleFormControlInput1"
-                class="form-control"
-              />
+        <div class="text-center my-5">
+            <div class="card-body">
+              <p class="card-text fs-2 fw-bold">Admin Login</p>
+              <div class="d-flex justify-content-center align-items-center gap-4">
+                <a href="../BrandlogsForms/adminLogin.html" style="text-decoration: none;"><button class="btn btn-outline-success">Brandlogs Admin</button></a>
+                <a href="../BrandlogsForms/Schoolsignin.html" style="text-decoration: none;"><button class="btn btn-outline-success">School Director</button></a>
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="inputPassword5" class="form-label">Password</label>
-              <input
-                type="password"
-                id="inputPassword5"
-                class="form-control"
-                aria-describedby="passwordHelpBlock"
-              />
-            </div>
-          </form>
-          <a
-            href="../Admin/usermetrics.html"
-            style="text-decoration: none; display: block"
-          >
-            <div class="d-flex align-items-center justify-content-center">
-              <button
-                id="usermetrics"
-                type="submit"
-                class="w-100 mt-3 px-4 py-2 rounded"
-              >
-                Login
-              </button>
-            </div>
-          </a>
-        </div>
-      </div>
+          </div>
     </div>
     <footer class="bg-success py-5 text-decoration-none mt-5">
       <div class="container-fluid text-center">
