--- a/Brandlogs/Admin/landingPage.html
+++ b/Brandlogs/Admin/landingPage.html
@@ -51,7 +51,7 @@
     <main style="padding: 106px 0px">
       <div class="wrapper">
         <!-- Sidebar Holder -->
-        <nav id="sidebar" class="active">
+        <nav id="sidebar" class="active bg-white">
           <ul class="list-unstyled components">
             <li class="mobile-icon">
               <a
@@ -101,11 +101,11 @@
                 <div class="d-flex">
                   <i
                     class="fas fa-home"
-                    style="margin: 10px; color: #1c9346"
+                    style="margin: 10px; color: #f7a01c"
                   ></i>
                   <h4
                     class="mobile-hide-text text"
-                    style="margin: 10px; color: #1c9346"
+                    style="margin: 10px; color: #f7a01c"
                   >
                     Landing Page
                   </h4>
@@ -493,6 +493,13 @@ Existing FAQs</textarea
               <div>
                 <a href="/" class="text-decoration-none text-white"
                   >Terms &amp; Conditions</a
+                >
+              </div>
+              <div>
+                <a
+                  href="./AdminOptions.html"
+                  class="text-decoration-none text-white"
+                  >Admin Login</a
                 >
               </div>
               <br />
