--- a/Brandlogs/Admin/usermetrics.html
+++ b/Brandlogs/Admin/usermetrics.html
@@ -51,7 +51,7 @@
     <main style="padding: 106px 0px">
       <div class="wrapper">
         <!-- Sidebar Holder -->
-        <nav id="sidebar" class="active">
+        <nav id="sidebar" class="active bg-white">
           <ul class="list-unstyled components">
             <li class="mobile-icon">
               <a
@@ -62,11 +62,11 @@
                 <div class="d-flex">
                   <i
                     class="fas fa-user"
-                    style="margin: 10px; color: #1c9346"
+                    style="margin: 10px; color: #f7a01c"
                   ></i>
                   <h4
                     class="mobile-hide-text text"
-                    style="margin: 10px; color: #1c9346"
+                    style="margin: 10px; color: #f7a01c"
                   >
                     User Metrics
                   </h4>
@@ -127,102 +127,129 @@
             class="row d-flex justify-content-center"
           >
             <div class="col-md-6">
+              <div class="text-success text-center fs-3">
+                <p>Total Users: 3390</p>
+              </div>
               <canvas id="genderPieChart"></canvas>
             </div>
           </div>
 
           <!-- User Birthday Cards -->
-          <div class="col-12">
+          <div class="col-lg-12 col-md-10 col-sm-8">
             <div class="mt-5">
               <h3 class="fs-6">
                 <strong>User Birthday Metrics</strong>
               </h3>
               <div class="card-columns d-flex flex-column gap-2">
                 <!-- Static cards for each month -->
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      January <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      January <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      February <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      February <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      March <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      March <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      April <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      April <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      May <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      May <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      June <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      June <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      July <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      July <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      August <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      August <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      September <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      September <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
 
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      October <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      October <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
 
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      November <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      November <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
 
-                <div style="background-color: #3984b26b" class="card">
+                <div style="background-color: #1c9346" class="card">
                   <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between">
-                      December <span class="text-danger">45</span>
+                    <h5
+                      class="card-title text-white d-flex justify-content-between"
+                    >
+                      December <span class="text-white">45</span>
                     </h5>
                   </div>
                 </div>
@@ -256,27 +283,52 @@
                 To The Age Of Hunger Liberation
               </h2>
               <div>
-                <a href="#About" class="text-decoration-none">About Us</a>
+                <a
+                  href="../LandingPage/landingPage.html#About"
+                  class="text-decoration-none"
+                  >About Us</a
+                >
               </div>
               <div>
-                <a href="#Benefits" class="text-decoration-none">Benefits</a>
+                <a
+                  href="../LandingPage/landingPage.html#Benefits"
+                  class="text-decoration-none"
+                  >Benefits</a
+                >
               </div>
               <div>
-                <a href="#OurStories" class="text-decoration-none"
+                <a
+                  href="../LandingPage/landingPage.html#OurStories"
+                  class="text-decoration-none"
                   >Our Stories</a
                 >
               </div>
               <div>
-                <a href="#FAQs" class="text-decoration-none">FAQs</a>
+                <a
+                  href="../LandingPage/landingPage.html#FAQs"
+                  class="text-decoration-none"
+                  >FAQs</a
+                >
               </div>
               <div>
-                <a href="/" class="text-decoration-none text-white"
+                <a
+                  href="../PrivacyPolicy/privacyPolicy.html"
+                  class="text-decoration-none text-white"
                   >Privacy Policy</a
                 >
               </div>
               <div>
-                <a href="/" class="text-decoration-none text-white"
+                <a
+                  href="../TermsAndConditions/termsAndConditions.html"
+                  class="text-decoration-none text-white"
                   >Terms &amp; Conditions</a
+                >
+              </div>
+              <div>
+                <a
+                  href="./AdminOptions.html"
+                  class="text-decoration-none text-white"
+                  >Admin Login</a
                 >
               </div>
               <br />
