--- a/Brandlogs/LandingPage/landingPage.html
+++ b/Brandlogs/LandingPage/landingPage.html
@@ -27,16 +27,16 @@
               <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="menu">
+            <div class="collapse navbar-collapse" id="menu" style="font-size: 20px;">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-5">
-                        <a class="nav-link text-white" href="/Landingpage/landingPage.html#Benefits"><b>Benefits</b></a>
+                        <a class="nav-link text-white" href="#Benefits"><b>Benefits</b></a>
                     </li>
                     <li class="nav-item mx-5">
-                        <a class="nav-link text-white " href="/Landingpage/landingPage.html#About"><b>Who we are</b></a>
+                        <a class="nav-link text-white" href="#About"><b>Who we are</b></a>
                     </li>
                     <li class="nav-item mx-5">
-                        <a class="nav-link text-white" href="/Landingpage/landingPage.html#FAQs"><b>FAQS</b></a>
+                        <a class="nav-link text-white" href="#FAQs"><b>FAQS</b></a>
                     </li>
                 </ul>
             </div>
@@ -60,9 +60,9 @@
                         </h1>
                         <h2 class="-mt-8 font-weight-bold tracking-tight md-text-2xl xl-text-2xl pb-6">The Future of Retail Shopping Experience</h2>
                         <br/>
-                        <h6 class="-mt-8" style="padding: 0px 20px;"><b>That Rewards you $250 Gift Voucher Bonus for Kickstarting Feeding a Food Insecure Child.</b></h6>
+                        <h6 class="-mt-8" style="padding: 0px 20px;"><b>That Rewards you $250 Hero Gifting Bonus for Kickstarting Feeding a Food Insecure Child.</b></h6>
                         <br/>
-                        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+                        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Hero Bonus</p>
                         <button type="button" onclick="NavigateHome()" style="width: 200px; margin-top: 15px;" class="btn btn-danger">
                             <b>Explore Product</b>
                         </button>  
@@ -92,7 +92,7 @@
         </div>
     
         <br/>
-        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Hero Bonus</p>
         <button type="button" onclick="NavigateHome()" class="cta">
             <b>Explore Product</b>
         </button>  
@@ -103,7 +103,7 @@
 
       <!-- Benefits Section -->
       <section class="container mx-auto text-center my-5" style='margin: 50px 0px;'>
-        <h2 class="display-4 font-weight-bold mb-3" id="Benefits" style="color: #3783B4;">Benefits</h2>
+        <h2 id="Benefits" class="display-4 font-weight-bold mb-3" style="color: #3783B4;">Benefits</h2>
         <br/>
         <p class="lg:px-32 md:px-8">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
@@ -286,7 +286,7 @@
         </div>
 
         <br/>
-        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Hero Bonus</p>
         <button type="button" onclick="NavigateHome()" class="cta">
             <b>Explore Product</b>
         </button>  
@@ -296,7 +296,7 @@
         <br/>
         <br/>
        <!-- Who we Are Section -->
-       <section class="text-center my-5">
+       <section id="About" class="text-center my-5">
         <h2 class="display-4 font-weight-bold" style="color: #3783B4;" id="About">Who we are</h2>
         <br/>
         <br/>
@@ -422,7 +422,7 @@
         </div>
         <br/>
         <br/>
-        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Hero Bonus</p>
         <button type="button" onclick="NavigateHome()" class="cta">
             <b>Explore Product</b>
         </button>  
@@ -577,7 +577,7 @@
         </section>
         <br/>
         <br/>
-        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Bonus</p>
+        <p class="text-cta-caption" style="margin-bottom: -1px;">To Get $250 Hero Bonus</p>
         <button type="button" onclick="NavigateHome()" class="cta">
             <b>Explore Product</b>
         </button>  
@@ -586,7 +586,7 @@
        <!-- End of Our Story Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= --> 
-    <section id="faq" class="faq">
+    <section id="FAQS" class="faq">
         <div class="container">
         <div id="FAQs" style="text-align:center;">
             <h2 class="display-4 font-weight-bold mb-3" style="color: #3783B4;">Frequently Asked Questions</h2>
@@ -724,22 +724,53 @@
               <div class="footer-links ">
                 
                 <div>
-                  <a href="#About" class="text-decoration-none   ">About Us</a>
+                  <a
+                    href="../LandingPage/landingPage.html#About"
+                    class="text-decoration-none"
+                    >About Us</a
+                  >
                 </div>
                 <div>
-                  <a href="#Benefits" class="text-decoration-none ">Benefits</a>
+                  <a
+                    href="../LandingPage/landingPage.html#Benefits"
+                    class="text-decoration-none"
+                    >Benefits</a
+                  >
                 </div>
                 <div>
-                  <a href="#OurStories" class="text-decoration-none  ">Our Stories</a>
+                  <a
+                    href="../LandingPage/landingPage.html#OurStories"
+                    class="text-decoration-none"
+                    >Our Stories</a
+                  >
                 </div>
                 <div>
-                    <a href="#FAQs" class="text-decoration-none ">FAQs</a>
+                  <a
+                    href="../LandingPage/landingPage.html#FAQs"
+                    class="text-decoration-none"
+                    >FAQs</a
+                  >
                 </div>
                 <div>
-                    <a href="../PrivacyPolicy/privacyPolicy.html" class="text-decoration-none  ">Privacy Policy</a>
+                  <a
+                    href="../PrivacyPolicy/privacyPolicy.html"
+                    class="text-decoration-none text-white"
+                    >Privacy Policy</a
+                  >
                 </div>
                 <div>
-                    <a href="../TermsAndConditions/termsAndConditions.html " class="text-decoration-none ">Terms &amp; Conditions</a>
+                  <a
+                    href="../TermsAndConditions/termsAndConditions.html"
+                    class="text-decoration-none text-white"
+                    >Terms &amp; Conditions</a
+                  >
+                </div>
+                <div>
+                  <a
+                    href="../Admin/AdminOptions.html"
+                    class="text-decoration-none text-white"
+                    >Admin Login</a
+                  >
                 </div>
                 <br/>
                 <div>
